# python-project-52

./: .gitignore  Makefile  Procfile  README.md  db.sqlite3  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: linter-and-tests.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
staticfiles/: staticfiles.json
task_manager/: general_models.py  mixins.py  settings.py  urls.py  views.py
task_manager/labels/: models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_remove_label_updated_at_label_modified_at_and_more.py
task_manager/labels/templates/labels/: label_confirm_delete.html  label_list.html
task_manager/statuses/: models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/templates/statuses/: delete_status.html  status_list.html
task_manager/tasks/: filter.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_status.py  0002_initial.py  0003_rename_assigned_to_task_executor.py  0003_task_labels.py  0004_remove_task_updated_at_task_modified_at_and_more.py
task_manager/tasks/templates/tasks/: task_confirm_delete.html  task_detail.html  task_form.html  task_list.html
task_manager/templates/: base.html  index.html
task_manager/templates/registration/: login.html
task_manager/tests/: factories.py  test_labels.py  test_statuses.py  test_tasks.py  test_users.py
task_manager/users/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
(+4 files in other folders)
