[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["MarsBroshok96 <marsbroshok1996@gmail.com>"]
readme = "README.md"
packages = [{include = "python_project_52"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.7"
python-dotenv = "^1.0.0"
dj-database-url = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
